base/01-intern/07-mon/02-prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: mon
  labels:
    environment: mon
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: prometheus
      containers:
        - name: prometheus
          image: prom/prometheus
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus/
          ports:
            - containerPort: 9090
