base/01-intern/07-mon/02-prometheus/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-http
  namespace: mon
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prom.home`)
      kind: Rule
      services:
        - name: prometheus
          port: 9099
